[package]
name = "mitt-spel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = { version = "0.4", features = ["audio"], git = "https://github.com/not-fl3/macroquad" }
macroquad-particles = { version = "0.2", git = "https://github.com/not-fl3/macroquad" }

[profile.dev.package."*"]
opt-level = 3
